test/corpus/long
====
LONG
====

use std::mem

proc.test end
proc.with_locals.2 end
proc.test assert end
proc.with_locals.2 assert end

export.test end
export.with_locals.2 end
export.test assert end
export.with_locals.2 assert end

begin
  assert
  adv.keyval
  adv.mem.1.2
  exp
  exp.u1
  u32assert.1
  u32assert.2
  add
  add.1
  u32checked_add
  u32checked_add.1

  if.true end
  if.true assert end
  if.true assert else assert end

  while.true end
  while.true assert end

  repeat.5 end
  repeat.5 assert end

  call.test
  call.mem::memcopy

  exec.test
  exec.mem::memcopy

  syscall.test
  syscall.mem::memcopy
end

---

    (source_file
      (use)
      (proc)
      (proc
        (u16))
      (proc
        (opcode))
      (proc
        (u16)
        (opcode))
      (export)
      (export
        (u16))
      (export
        (opcode))
      (export
        (u16)
        (opcode))
      (main
        (opcode)
        (opcode)
        (opcode
          (u32)
          (u32))
        (opcode)
        (opcode
          (u8))
        (opcode)
        (opcode)
        (opcode)
        (opcode
          (felt))
        (opcode)
        (opcode
           (u32))
        (if)
        (if
          (opcode))
        (if_else
          (opcode)
          (opcode))
        (while)
        (while
          (opcode))
        (repeat
          (u16))
        (repeat
          (u16)
          (opcode))
        (call)
        (call)
        (exec)
        (exec)
        (syscall)
        (syscall)))
